# isucon14

./: .gitignore  slow_query_20241108023158.digest
python/: gunicorn.conf.py  pyproject.toml
python/app/: app_handlers.py  chair_handlers.py  internal_handlers.py  models.py  owner_handlers.py  payment_gateway.py  utils.py
sql/: 1-schema.sql  2-master-data.sql  init.sh
