[tool.poetry]
name = "isuride"
version = "0.1.0"
description = "Your project description here"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.13" # Correct place for Python version constraint
fastapi = ">=0.115.5"
gunicorn = ">=23.0.0"
pymysql = { version = ">=1.1.1", extras = ["rsa"] }
python-ulid = ">=3.0.0"
sqlalchemy = ">=2.0.36"
urllib3 = ">=2.2.3"
uvicorn-worker = ">=0.2.0"

[tool.poetry.dev-dependencies]
ruff = "*"

[tool.ruff.lint]
extend-select = [
    "UP", # pyupgrade
    "I", # isort
    "FAST", # FastAPI
]